reworked builtins, added a bunch of helpful std methods for builtin types

--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,4 @@
 - add error for nonexistent variant in destructure
 - add operations for all the new types
 - fix code areas
+- unary values dont have proper area
